// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders Header for route / with expected name Dashboard 1`] = `

<div class="flex w-full justify-between px-8 py-3 bg-white dark:bg-black">
  <h3 class="text-2xl font-bold mt-1">
    Dashboard
  </h3>
</div>

`;

exports[`renders Header for route /dashboard with expected name Dashboard 1`] = `

<div class="flex w-full justify-between px-8 py-3 bg-white dark:bg-black">
  <h3 class="text-2xl font-bold mt-1">
    Dashboard
  </h3>
</div>

`;

exports[`renders Header for route /error with expected name null 1`] = `


`;

exports[`renders Header for route /explore with expected name Explore 1`] = `

<div class="flex w-full justify-between px-8 py-3 bg-white dark:bg-black">
  <h3 class="text-2xl font-bold mt-1">
    Explore
  </h3>
</div>

`;

exports[`renders Header for route /labels with expected name Labels 1`] = `

<div class="flex w-full justify-between px-8 py-3 bg-white dark:bg-black">
  <h3 class="text-2xl font-bold mt-1">
    Labels
  </h3>
</div>

`;

exports[`renders Header for route /queries with expected name Queries 1`] = `

<div class="flex w-full justify-between px-8 py-3 bg-white dark:bg-black">
  <h3 class="text-2xl font-bold mt-1">
    Queries
  </h3>
</div>

`;
